# repro-bazel-cquery-trim-test-configuration

./: BUILD.bazel  WORKSPACE  cowsay_test.py  requirements.txt  requirements_lock.txt
